# is-even

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py  test.py
.github/workflows/: main.yml  test.yml  tests.yml
is_even/: __init__.py
